--- a/acronyms.tex
+++ b/acronyms.tex
@@ -14,7 +14,7 @@
 \newacronym{OSUCCC}{OSUCCC}{The Ohio State Comprehensive Cancer Center}
 \newacronym{LLE}{LLE}{Laboratory for Laser Energetics}
 \newacronym{TNSA}{TNSA}{target normal sheath acceleration}
-\newacronym{IBA}{IBA}{Ion Beam Analysis}
+\newacronym{IBA}{IBA}{ion beam analysis}
 \newacronym{IMPT}{IMPT}{intensity modulated proton therapy}
 \newacronym{ALLS}{ALLS}{Advanced Laser Light Source}
 \newacronym{XPIF}{XPIF}{x-ray and particle-induced fluorescence}
@@ -37,19 +37,23 @@
 \newacronym{HEDS}{HEDS}{high energy density science}
 \newacronym{BO}{BO}{bayesian optimization}
 \newacronym{WP-ELL}{WP-ELL}{Extreme Light Laboratory at the Wright-Patterson Air Force Base}
-\newacronym{GPU}{GPU}{Graphics Processing Unit}
+\newacronym{GPU}{GPU}{graphics processing unit}
 \newacronym{OSC}{OSC}{Ohio Supercomputer Center}
-\newacronym{SVR}{SVR}{Support Vector Regression}
-\newacronym{RBF}{RBF}{Radial Basis Function}
-\newacronym{MAPE}{MAPE}{Mean Absolute Percentage Error}
-\newacronym{MSE}{MSE}{Mean Squared Error}
-\newacronym{RMSE}{RMSE}{Root Mean Squared Error}
+\newacronym{SVR}{SVR}{support vector regression}
+\newacronym{RBF}{RBF}{radial basis function}
+\newacronym{MAPE}{MAPE}{mean absolute percentage error}
+\newacronym{MSE}{MSE}{mean squared error}
+\newacronym{RMSE}{RMSE}{root mean squared error}
 \newacronym{AFIT}{AFIT}{Air Force Institute of Technology}
 \newacronym{CSUCI}{CSUCI}{California State University - Channel Islands}
 \newacronym{CSU}{CSU}{Colarado State University}
 \newacronym{RAL}{RAL}{Rutherford Appleton Laboratory}
-\newacronym{DAQ}{DAQ}{Data Acquisition System}
+\newacronym{DAQ}{DAQ}{data acquisition system}
 \newacronym{OAP}{OAP}{off-axis parabolic mirror}
 \newacronym{HDF5}{HDF5}{Hierarchical Data Format 5}
 \newacronym{EPICS}{EPICS}{Experimental Physics and Industrial Control System}
-\newacronym{GUI}{GUI}{Graphical User Interface}
+\newacronym{GUI}{GUI}{graphical user interface}
+\newacronym{RFR}{RFR}{random forest regression}
+\newacronym{JLF}{JLF}{Jupiter Laser Facility}
+\newacronym{PPC}{PPC}{particles per cell}
+\newacronym{EPPS}{EPPS}{Electron Positron Proton Spectrometer}
