--- a/chap6.tex
+++ b/chap6.tex
@@ -13,7 +13,7 @@ To enhance the MeV proton yield within the existing mJ class laser system, the \
 \end{itemize}
 Evidently, many parameters influence the laser-target interaction in a very non-linear way which cannot be easily seen through the raw data. In this chapter, I give an overview of the kHz laser system at \gls{WP-ELL} and particularly focus on the \gls{DAQ} developed by fellow graduate student Nathaniel Tamminga and \gls{CSUCI} professor Scott Feister. Then, the code and machine learning framework that I developed, with some help from Jack Felice, to send optimized parameters back to the \gls{DAQ} is described. Finally, some results from this elementary machine learning feedback loop are discussed. The experimental operation of the laser was handled by the lab technician Kyle Frische. Miami University professor and former OSU graduate student Joseph Snyder helped with the experiments using his prior experience at the laboratory. Additionally, Anil Patnaik and Michael Dexter from AFIT and OSU professor Enam Chowdhury gave valuable feedback during weekly meetings for this effort. The results from this work are currently under consideration at \emph{APL Machine Learning}.
 
-\section{Background}
+\section{Background} \label{sec:lab_background}
 
 In this section, I will describe the experimental setup at the \gls{WP-ELL} which uses a Ti:Sapphire based ultra-intense $780 \unit{\nano \meter}$ laser and a liquid sheet target.  
 
@@ -87,7 +87,7 @@ In this work, we change the target position along the laser-axis direction which
 \subsubsection{Other Sources}
 There are other potential radiation sources that can be measured but I will give two others as examples. The amount of ionizing radiation is already recorded the \emph{Radiation Survey Log} that AFIT graduate student Benjamin Knight has created in units of mR/h (milli roentgen per hour). Second, neutrons have been detected \cite{Knight_2024_HPLSE} and optimizing their counts could give insights into high-repetition rate fusion.
 
-\section{Optimization Experiments}
+\section{Optimization Experiments} \label{sec:daq_results}
 
 In this section, the data analysis suite that I have developed will be explained in detail. Then, some results from one highlighted day will be explored to demonstrate the types of experiments that one could conduct using this setup.
 
@@ -104,7 +104,7 @@ Then, to smooth the spectra, I subtracted out the noise using counts from the li
 Finally, I merged all the data sources together in one pandas dataframe which was then saved to a compressed \gls{HDF5} file.
 
 \subsubsection{Data Visualization}
-Given a merged and filtered dataset, it is now easy to visualize the data which can be seen in \autoref{fig:optimization_gui} which is based on data collected on June 14th 2024. In \autoref{fig:optimization_gui}(B), the main pulse and pre-pulse parameter space is seen to be adequately explored over a time frame of 45 minutes. In \autoref{fig:optimization_gui}(C), the cosine-squared mapping between the waveplate angle and diode voltage for both main and pre-pulse is shown. In the lab, the angle of the main pulse waveplate drifts over time, so an initial angle ``$\theta_0$'' is automatically inferred from the data that corresponds to the waveplate angle that registers maximum voltage. In \autoref{fig:optimization_gui}(D), the main pulse and target focus position (\texttt{nozzle\_focus}) are plotted as a function of shot number (and time) which shows approximately 25,000 shots worth of data.
+Given a merged and filtered dataset, visualizing the data is easy (see \autoref{fig:optimization_gui}) which is based on data collected on June 14th 2024. In \autoref{fig:optimization_gui}(B), the main pulse and pre-pulse parameter space is adequately explored over a 45 minute time frame. In \autoref{fig:optimization_gui}(C), the cosine-squared mapping between the waveplate angle and diode voltage for both main and pre-pulse is shown. In the lab, the angle of the main pulse waveplate drifts over time, so an initial angle ``$\theta_0$'' is automatically inferred from the data corresponding to the waveplate angle that registers maximum voltage. In \autoref{fig:optimization_gui}(D), the main pulse and target focus position (\texttt{nozzle\_focus}) are plotted as a function of shot number (and time) which shows approximately 25,000 shots worth of data.
 
 \begin{figure}
 	\centering 
@@ -143,20 +143,26 @@ The developed \gls{ML} framework was tested out on various days in the summer of
 	\label{tab:exp_runs}
 \end{table}
 
-These three quantities were simultaneously varied with three different periods so that the 3D parameter space would be adequately explored. The approximately 25,000 data points from this 45 second run were stored in a consolidated \gls{HDF5} file. After this, we used the optimization \gls{GUI} in \autoref{fig:optimization_gui}(E) to quickly fit a regression with specified hyperparameters on the collected data. This model is used to smooth over noisy data points and we can apply a metric (just like what was done in \autoref{sec:first_analysis} and \autoref{sec:second_analysis}) to optimize for two different properties. Here, we use the following objective function
+These three quantities were simultaneously varied with three different periods so that the 3D parameter space would be adequately explored. The approximately 25,000 data points from this 45 second run were stored in a consolidated \gls{HDF5} file. After this, we used the optimization \gls{GUI} in \autoref{fig:optimization_gui}(E) to quickly fit a regression with specified hyperparameters on the collected data. Similar to \autoref{sec:second_analysis}, we used min-max scaling on all the inputs due to the fixed parameter bounds in \autoref{tab:exp_runs}, but use standard z-score scaling on the outputs (logarithm of the ccd counts and 99th percentile energy). This model is used to smooth over noisy data points and we can apply a metric (just like what was done in \autoref{sec:first_analysis} and \autoref{sec:second_analysis}) to optimize for two different properties. Here, we use the following objective function
 
 \begin{equation}
 	f(KE_{\rm cutoff},N_{e})  =  1 + (1 - \beta) \cdot \left(1 -  \frac{\log_{10}(N_{e})}{8} \right) + \beta \frac{|KE_{\rm c} - KE_{\rm c,goal}|}{KE_{\rm c, goal}} \label{eq:obj_function_daq}
 \end{equation}
 which looks notably similar to \autoref{eq:obj_function_v2} if the logarithm of the \gls{CCD} electron counts $N_e$ replaces the conversion efficiency $\eta$. We attempted to perform a similar optimization task as explored in \autoref{ch:5}, but the electron data largely had signals at the same energy which can be seen in \autoref{fig:spectrum_gui}(D, E). This spectrum peaks around 0.7 or 0.8 MeV but can have a higher or lower number of counts based on the input parameters. We found (unsurprisingly) that the conditions with highest electron counts correspond to maximum main pulse intensity, minimum pre-pulse intensity, and close to peak focus. An example of this can be seen in \autoref{fig:optimization_gui}(F) which highlights the main pulse and pre-pulse optimal conditions with a blue star. For this run, 8.555 mm was the absolute position of the target when peak focus was achieved which matches the peak focus listed in the figure legend.
 
-Even though the electron spectra did not offer a lot of interesting physics to explore, we did succesfully implement a feedback loop which sent the optimized main pulse, pre-pulse, and focus conditions back to motion controllers and waveplates in the lab via the \gls{EPICS} protocol. An example of this can be seen in \autoref{fig:beta_shift} where, during a second data collection, optimized parameters from the first run were sent via \gls{EPICS} to change the electron spectra in real-time. Each different value of $\beta$ specified a slightly different set of input parameters that were tested for 30 seconds before moving on to the next value of $\beta$.
+Even though the electron spectra did not offer a lot of interesting physics to explore, we did successfully implement a feedback loop which sent the optimized main pulse, pre-pulse, and focus conditions back to motion controllers and waveplates in the lab via the \gls{EPICS} protocol. An example of this can be seen in \autoref{fig:beta_shift} where, during a second data collection, optimized parameters from the first run were sent via \gls{EPICS} to change the electron spectra in real-time. Each value of $\beta$ specified a slightly different set of input parameters that were tested for 30 seconds before moving on to the next value of $\beta$. We can see that the higher values of $\beta$ have maximum electron kinetic energy closer to 0.7 MeV in comparison to the higher values of $\beta$. Importantly, the python scripts automatically sent instructions 
 
 \begin{figure}
 	\centering 
-	\includegraphics[width=\linewidth]{planning/images/daq/rf_beta_shift.jpg}
-	\caption{Electron spectra plotted for various levels of $\beta$ for a specified cutoff energy $KE_{\rm c,goal} = 0.7$ MeV. The different spectra are predicted optimal parameters from a \gls{RF} model trained on data collected in an earlier run.}
+	\includegraphics[width=0.6\linewidth]{planning/images/daq/rf_beta_shift.jpg}
+	\caption{Electron spectra plotted for various levels of $\beta$ for a specified cutoff energy $KE_{\rm c,goal} = 0.7$ MeV. The different spectra are predicted optimal parameters from a \gls{RFR} model trained on data collected in an earlier run.}
 	\label{fig:beta_shift}
 \end{figure}
 
 \section{Conclusion}
+
+The chapter started by overviewing the experimental setup in \autoref{sec:lab_background} of the \gls{WP-ELL} which includes a 1 kHz femtosecond laser, up to 100 Hz particle spectrometers, and a free-flowing liquid target. Many parameters like the main/pre-pulse peak intensity, focus position in reference to the target, pulse delays, and more can be easily adjusted manually with the click of a button. Then, we explained the optimization experiment in \autoref{sec:daq_results} that involved collecting data from one run where three input parameters were varied simultaneously. This data was used to train a \gls{ML} model that could map these three input target conditions to features of an electronic spectra: the maximum energy and total counts on the \gls{CCD}. The trained model was then used to predict optimal inputs according to \autoref{eq:obj_function_daq}). Finally, these predicted optima were sent via \gls{EPICS} to the relevant lab equipment in an automated way to explore laser and target conditions that yield a desired spectrum. We showed in \autoref{fig:beta_shift} that this feedback loop can work in principle to balance two competing properties: maximum kinetic energy and high electron counts. 
+
+While this work is certainly important, it is still in early stages. We have the ability to collect proton spectra which can be more difficult to obtain but have more use for applications. However, the amount of proton data that we are able to get is usually minimal -- much of the explored parameter spaces end up with no proton signal. To make real progress, we would need to make improvements on the experimental side to obtain a more stable target that could more reliably generate MeV protons for a range of different input conditions.
+
+Furthermore, our current feedback loop involves fitting a relatively simple regression to the data -- something that is only possible when the size of the data is small (tens of thousands) and there are only a few different parameters. A more useful model that could feasibly handle larger and more complex datasets would be the \gls{NN} as evidenced by \autoref{sec:second_analysis}. Additionally, \gls{GPU}-accelerated computations would be necessary to operate this feedback loop in real-time. After obtaining several high-quality datasets scanning different parameters, we could pre-train the \gls{NN} so that when presented with a limited amount of new data from a different day, it could more quickly assess the ideal laser conditions. The work presented here represents an important first step in incorporating \gls{ML} methods to optimize \gls{TNSA} accelerated protons in real-time. 
