--- a/motivation.bib
+++ b/motivation.bib
@@ -4,6 +4,17 @@
 	pages={1–50}
 }
 
+@ARTICLE{Wolpert_1997_IEEE,
+	author={Wolpert, D.H. and Macready, W.G.},
+	journal={IEEE Transactions on Evolutionary Computation}, 
+	title={No free lunch theorems for optimization}, 
+	year={1997},
+	volume={1},
+	number={1},
+	pages={67-82},
+	keywords={Iron;Evolutionary computation;Information theory;Minimax techniques;Simulated annealing;Algorithm design and analysis;Performance analysis;Probability distribution;Bayesian methods},
+	doi={10.1109/4235.585893}
+}
 @misc{Feister_2019_arXiv,
 	title={Development Considerations for High-Repetition-Rate HEDP Experiments}, 
 	author={Scott Feister and Patrick L. Poole and Peter V. Heuer},
